# mcp-edge

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  wokwi.yml
docs/: platform-support.md
examples/firmware/esp32_micropython/: README.md  diagram.json  host_demo.py  host_demo_ble.py  host_demo_wifi.py  main.py  main_ble.py  main_ble_lowlevel.py  main_wifi.py  mcplite_device.py  wokwi.toml
src/mcp_edge/: __init__.py  buffer.py  cli.py  client.py  codec.py  gateway.py  health.py  mcplite.py  pool.py  registry.py  schema.py  server.py  tiers.py
src/mcp_edge/devices/: __init__.py  simulator.py
src/mcp_edge/transports/: __init__.py  base.py  ble.py  discovery.py  loopback.py  serial.py  tcp.py  udp.py
tests/: __init__.py  test_ble.py  test_buffer.py  test_cli.py  test_client.py  test_codec.py  test_firmware_core.py  test_gateway.py  test_health.py  test_mcplite.py  test_pool.py  test_registry.py  test_schema.py  test_serial.py  test_server.py  test_simulator.py  test_smoke.py  test_tcp.py  test_tiers.py  test_transports.py  test_udp.py
